# 2036-Final-Project

2036SkeletonCmake/: AnimatedGameObject.cpp  CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  RegularGameObject.cpp  RegularGameObject.h
VS Code/: 2036_final_project.cpp  2036_final_project.vcxproj  2036_final_project.vcxproj.filters  AnimatedGameObject.cpp  AnimatedGameObject.h  CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  RegularGameObject.cpp  RegularGameObject.h
VS Code/Debug/: 2036_final_project.pch  vc141.idb
VS Code/Debug/2036_fin.AFD42207.tlog/: 2036_final_project.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VS Code/NEW CODE/: AnimatedGameObject.cpp  AnimatedGameObject.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  RegularGameObject.cpp  RegularGameObject.h
VS Code/x64/Debug/: 2036_final_project.pch  vc141.idb
VS Code/x64/Debug/2036_fin.AFD42207.tlog/: 2036_final_project.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
__MACOSX/2036SkeletonCmake/: ._cmake-build-debug
